--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,9 +34,18 @@ android {
     compileSdk = 34 //flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
+//    compileOptions {
+//        sourceCompatibility = JavaVersion.VERSION_1_8
+//        targetCompatibility = JavaVersion.VERSION_1_8
+//    }
+
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"  // Ensures Kotlin is compiled with Java 17
     }
 
     defaultConfig {
